SigmaCodebackup3rdSep/objects/PackagedProducts__c.object
<CustomObject>
    <fields>
        <fullName>Auto_allocate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto allocate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Canceled_Package__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Canceled Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <label>Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Inventory_Location_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Location Product</label>
        <referenceTo>Inventory_Location_Product__c</referenceTo>
        <relationshipName>PackagedProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>PackagedProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lot</label>
        <referenceTo>Lot__c</referenceTo>
        <relationshipName>PackagedProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Merchant_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Merchant Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>PackagedProducts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Created_Via__c</fullName>
        <label>Order Created Via</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Packaged Products</relationshipLabel>
        <relationshipName>Packaged_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipName>PackagedProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Package_Date__c</fullName>
        <label>Package Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Package__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Package</label>
        <referenceTo>Package__c</referenceTo>
        <relationshipName>PackagedProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>PackagedProducts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Order</label>
        <referenceTo>Product_Order_Price_Book__c</referenceTo>
        <relationshipName>PackagedProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>PackagedProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_used__c</fullName>
        <formula>Quantity__c  -  Returned_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Returned_Quantity_Comments__c</fullName>
        <label>Returned Quantity Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Returned_Quantity__c</fullName>
        <label>Returned Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sigma_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sigma Order</label>
        <referenceTo>Sigma_Order__c</referenceTo>
        <relationshipLabel>Packaged Products</relationshipLabel>
        <relationshipName>Packaged_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Consumed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Via_Autopick__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Via Autopick</label>
        <type>Checkbox</type>
    </fields>
    <label>Packaged Product</label>
    <nameField>
        <displayFormat>PP-{0000}</displayFormat>
        <label>Packaged Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Packaged Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>